<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Test2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Android Student Club</string>
    <string name="addnew">ADD NEW</string>
    <string name="info">Student Info</string>
    <string name="id">Student Id</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>

</resources>